changed github action to not run twice

--- a/.github/workflows/continuous-integration-pip.yml
+++ b/.github/workflows/continuous-integration-pip.yml
@@ -1,8 +1,13 @@
 # See https://docs.github.com/en/actions/guides/building-and-testing-python
-# 2020-02-20 slg - For Dreamhost, we are now using Python 3.9 and Ubuntu-18.04
-# There is no way to generate a random password that can be used in the services section, so that will need to be moved to a repository secret of RANDOM_PASSWORD
 name: CI (pip)
-on: [push, pull_request]
+
+on:
+  push:
+    branches:
+      - '**' # This will trigger the action for all branches
+  pull_request:
+    branches:
+      - main # Specify the branches for which pull_request events should trigger the action
 
 jobs:
   build:
@@ -17,6 +22,17 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+
+      # Conditional step for push events
+      - name: Run on push
+        if: github.event_name == 'push'
+        run: echo "This runs on a push to any branch"
+
+      # Conditional step for pull_request events
+      - name: Run on pull request
+        if: github.event_name == 'pull_request'
+        run: echo "This runs on a pull request to the main branch"
+
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
