--- a/.github/workflows/continuous-integration-pip.yml
+++ b/.github/workflows/continuous-integration-pip.yml
@@ -14,14 +14,19 @@ jobs:
     strategy:
       matrix:
         os: ['ubuntu-latest', 'macos-latest', 'windows-latest']   # with MySQL service, we now only run on ubuntu
-        python-version: [3.11]   # installed version on Dreamhost
+        python-version: [3.12]
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Initial checkout
+        uses: actions/checkout@v4
         with:
           submodules: true
+
+      - name: setup python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
       # Conditional step for push events
       - name: Run on push
@@ -43,11 +48,11 @@ jobs:
         if: startsWith(matrix.os, 'ubuntu')
         run: make install-ubuntu
 
-      - name: install Ubuntu-specific stuff
+      - name: install Mac-specific stuff
         if: startsWith(matrix.os, 'macos')
         run: make install-macos
 
-      - name: install Ubuntu-specific stuff
+      - name: install Windows-specific stuff
         if: startsWith(matrix.os, 'windows')
         run: make install-windows
 
