only do final ls on mac and ubuntu

--- a/.github/workflows/continuous-integration-pip.yml
+++ b/.github/workflows/continuous-integration-pip.yml
@@ -73,4 +73,5 @@ jobs:
 
 
       - name: List all files at end
+        if: startsWith(matrix.os, 'ubuntu') or startsWith(matrix.os, 'macos')
         run: find . -ls
