--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-python@v3
       - name: Install and run pdoc3
         run: |
-          pip install pdoc3
+          make install-ubuntu
           make pdoc
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
